@@ -1,0 +1,420 @@
+<?php
+  $_lang = array();
+  $_lang["language"] = "Deutsch";
+  $_lang['Loading, please wait'] = 'Lädt, bitte warten';
+$_lang['Services status'] = 'Status der Services';
+$_lang['ACTIVE'] = 'AKTIV';
+$_lang['DESACTIVE'] = 'INAKTIV';
+$_lang['Object log (last "lines")'] = 'Objekt-Protokoll (die letzten "Zeilen")';
+$_lang['Choose an Object'] = 'Ein Objekt auswählen';
+$_lang['Config KnxWeb'] = 'KnxWeb-Konfiguration';
+$_lang['none'] = 'Keine';
+$_lang['File'] = 'Datei';
+$_lang['Mysql'] = 'Mysql';
+$_lang['Edit "widgets/widgets.css" file'] = 'Datei "widgets/widgets.css" bearbeiten';
+$_lang['linknx log files (last'] = 'Linknx-Protokolldatei (letzten ';
+$_lang['lines)'] = 'Zeilen)';
+$_lang['Network setup'] = 'Netzwerkeinrichtung';
+$_lang['DHCP'] = 'DHCP';
+$_lang['Static'] = 'Statisch';
+$_lang['IP address'] = 'IP-Adresse';
+$_lang['Netmask'] = 'Netmask';
+$_lang['Gateway'] = 'Gateway';
+$_lang['DNS1 / DNS2'] = 'DNS1 / DNS2';
+$_lang['New version on cvs'] = 'Neue Version verfügbar';
+$_lang['(Empty = stdout)'] = '(Leer = stdout)';
+$_lang['(ex.: 0ms to 25.5s in steps of 100ms)'] = '(z.B.: 0ms bis 25.5s in 100ms-Schritten)';
+$_lang['(if specified, other parameters will be ignored)'] = '(wenn angegeben, werden andere Parameter ignoriert)';
+$_lang['(Log rotation will happen once this size reached)'] = '(Protokolldatei-Rotation wird durchgeführt, wenn diese Größe erreicht ist)';
+$_lang['(Older logs will be deleted once this number reach)'] = '(Ältere Protokolldateien werden gelöscht, wenn diese Anzahl erreicht ist)';
+$_lang['a SMS'] = 'eine SMS';
+$_lang['Actions'] = 'Aktionen';
+$_lang['Active'] = 'Aktiv';
+$_lang['Add a condition'] = 'Eine Bedingung hinzufügen';
+$_lang['Add an action'] = 'Eine Aktion hinzufügen';
+$_lang['Add an object'] = 'Ein Objekt hinzufügen';
+$_lang['Add IO Port'] = 'Einen IO-Port hinzufügen ';
+$_lang['Add new event'] = 'Ein neues Ereignis hinzufügen';
+$_lang['Add'] = 'Hinzufügen';
+$_lang['Admin'] = 'Admin';
+$_lang['Administer'] = 'Administrieren';
+$_lang['All'] = 'Alle';
+$_lang['an Email'] = 'eine E-Mail';
+$_lang['API id'] = 'API id';
+$_lang['At'] = 'Um';
+$_lang['Attach to Design'] = 'Ans Design anhängen';
+$_lang['Attention please select two objects of compatible types, for more information on this condition, please see'] = 'Bitte darauf achten, dass zwei Objekte mit kompatiblen Typen ausgewählt werden, für Details über diese Bedingung, siehe';
+$_lang['Auto/Manu'] = 'Auto/Manu';
+$_lang['Background color'] = 'Hintergrundfarbe';
+$_lang['Background image'] = 'Hintergrundbild';
+$_lang['Base'] = 'Base';
+$_lang['Basic'] = 'Basic';
+$_lang['Clear'] = 'Löschen';
+$_lang['Clear/Refresh'] = 'Löschen/Aktualisieren';
+$_lang['Refresh'] = 'Aktualisieren';
+$_lang['Clickatell'] = 'Clickatell';
+$_lang['Clone sub-page'] = 'Sub-Page duplizieren';
+$_lang['Clone'] = 'Duplizieren';
+$_lang['Close'] = 'Schließen';
+$_lang['Color'] = 'Farbe';
+$_lang['Command'] = 'Befehl';
+$_lang['Condition'] = 'Bedingung';
+$_lang['Configuration file (log4cpp)'] = 'Konfigurations-Datei (log4cpp)';
+$_lang['Configuration'] = 'Konfiguration';
+$_lang['Count'] = 'Zähler';
+$_lang['Current Zone'] = 'Gegenwärtige Zone';
+$_lang['Custom'] = 'Custom';
+$_lang['Data'] = 'Daten';
+$_lang['Database'] = 'Datenbank';
+$_lang['Date constant'] = 'Festes Datum';
+$_lang['Date variable'] = 'Veränderbares Datum';
+$_lang['Date'] = 'Datum';
+$_lang['Day/Month/Year'] = 'Tag/Monat/Jahr';
+$_lang['Debug'] = 'Debug';
+$_lang['Delay'] = 'Verzögerung';
+$_lang['Delete event'] = 'Ereignis löschen';
+$_lang['Delete IO Port'] = 'IO-Port löschen';
+$_lang['Delete object'] = 'Objekt löschen';
+$_lang['Delete rule'] = 'Regel löschen';
+$_lang['Delete'] = 'Löschen';
+$_lang['Description'] = 'Beschreibung';
+$_lang['Design height'] = 'Höhe des Designs';
+$_lang['Design width'] = 'Breite des Designs';
+$_lang['Design'] = 'Design';
+$_lang['disabled'] = 'deaktiviert';
+$_lang['Display "global" Widgets'] = '"globale" Widgets anzeigen';
+$_lang['Dont Care'] = 'Es ist egal';
+$_lang['Duration'] = 'Dauer';
+$_lang['During'] = 'Während';
+$_lang['Edit design mobile'] = 'Mobiles Design bearbeiten';
+$_lang['Edit design'] = 'Design bearbeiten';
+$_lang['Edit event'] = 'Ereignis bearbeiten';
+$_lang['Edit IO Port'] = 'IO-Port bearbeiten';
+$_lang['Edit object'] = 'Objekt bearbeiten';
+$_lang['Edit'] = 'Bearbeiten';
+$_lang['Enable slider'] = 'Schieberegler freigeben';
+$_lang['Enable'] = 'Freigeben';
+$_lang['End'] = 'Ende';
+$_lang['Error'] = 'Fehler';
+$_lang['Evaluate'] = 'Auswerten';
+$_lang['Event properties'] = 'Ereignis-Eigenschaften';
+$_lang['Events'] = 'Ereignisse';
+$_lang['Every'] = 'Jedes mal';
+$_lang['Exception days'] = 'Ausnahme-Tage';
+$_lang['Exception'] = 'Ausnahme';
+$_lang['Execute'] = 'Ausführen';
+$_lang['Expected'] = 'Erwartet';
+$_lang['False'] = 'Falsch';
+$_lang['file'] = 'Datei';
+$_lang['Flags'] = 'Flags';
+$_lang['Flow'] = 'Fluss';
+$_lang['for Id use only alphanumeric characters, - , _ , and NO SPACES'] = 'für die ID nur alphanumerische Zeichen, - , _ , und KEINE LEERZEICHEN benutzen';
+$_lang['Format of the logs'] = 'Format des Protokolls';
+$_lang['Formula : object'] = 'Formel : Objekt';
+$_lang['Framing'] = 'Rahmung';
+$_lang['From number'] = 'Von Nummer';
+$_lang['From object'] = 'Von Objekt';
+$_lang['From'] = 'Von';
+$_lang['GAD'] = 'GAD';
+$_lang['General'] = 'Allgemein';
+$_lang['Geographic coordinate'] = 'Geographische Koordinaten';
+$_lang['Height'] = 'Höhe';
+$_lang['here'] = 'hier';
+$_lang['Hexadecimal'] = 'Hexadezimal';
+$_lang['Host'] = 'Host';
+$_lang['Hour constant'] = 'Feste Stunde';
+$_lang['Hour variable'] = 'Veränderbare Stunde';
+$_lang['Hour/Minute'] = 'Stunde/Minute';
+$_lang['Id rule'] = 'Id der Regel';
+$_lang['Id_Event'] = 'Id des Ereignisses';
+$_lang['Id'] = 'Id';
+$_lang['inet'] = 'inet';
+$_lang['Info'] = 'Info';
+$_lang['Initial value'] = 'Anfangswert';
+$_lang['Insert widget'] = 'Widget einfügen';
+$_lang['IO Port'] = 'IO-Port';
+$_lang['IO Ports'] = 'IO-Ports';
+$_lang['IP'] = 'IP';
+$_lang['KNX connection'] = 'KNX-Verbindung';
+$_lang['Label'] = 'Beschriftung';
+$_lang['Latitude'] = 'Breitengrad';
+$_lang['List design'] = 'Liste der Designs';
+$_lang['List'] = 'Liste';
+$_lang['local'] = 'lokal';
+$_lang['Locked'] = 'Gesperrt';
+$_lang['Log File'] = 'Protokolldatei';
+$_lang['Log Level'] = 'Protokoll-Stufe';
+$_lang['Log Linknx'] = 'Linknx-Protokoll';
+$_lang['Log of Objects'] = 'Objekt-Protokoll';
+$_lang['Log table'] = 'Protokoll-Tabelle';
+$_lang['Logging'] = 'Protokollieren';
+$_lang['Longitude'] = 'Längengrad';
+$_lang['Max log file index (log4cpp)'] = 'maximaler Protokolldatei-Index (log4cpp)';
+$_lang['Max size (log4cpp)'] = 'maximale Größe (log4cpp)';
+$_lang['Menu'] = 'Menü';
+$_lang['Message'] = 'Nachricht';
+$_lang['Mode'] = 'Modus';
+$_lang['More information'] = 'Weitere Informationen';
+$_lang['Mysql connecion'] = 'Mysql-Verbindung';
+$_lang['Name'] = 'Name';
+$_lang['New design'] = 'Neues Design';
+$_lang['New sub-page'] = 'Neue Sub-Page';
+$_lang['New zone'] = 'neue Zone';
+$_lang['New Zone'] = 'neue Zone';
+$_lang['New'] = 'Neu';
+$_lang['No'] = 'Nein';
+$_lang['None'] = 'Keine';
+$_lang['Noon'] = 'Mittag';
+$_lang['Notice'] = 'Notice';
+$_lang['Number'] = 'Nummer';
+$_lang['Object'] = 'Objekt';
+$_lang['Objects'] = 'Objekte';
+$_lang['Off value'] = 'Ausschaltwert';
+$_lang['Offset'] = 'Versatz';
+$_lang['On value'] = 'Einschaltwert';
+$_lang['or'] = 'oder';
+$_lang['other (define a value)'] = 'anderer (Wert festlegen)';
+$_lang['Other'] = 'Anderer';
+$_lang['Password confirmation'] = 'Kennwort-Bestätigung';
+$_lang['Password doesn\'t match'] = 'Kennwörter stimmen nicht überein';
+$_lang['Password'] = 'Kennwort';
+$_lang['persist (read from persistant storage)'] = 'fortdauernd (aus dem persistenten Speicher lesen)';
+$_lang['Persistence directory'] = 'Persistenz-Verzeichnis';
+$_lang['Persistence log directory'] = 'Persistenz-Protokoll-Verzeichnis';
+$_lang['Persistence type'] = 'Art der Persistenz';
+$_lang['Persistence table'] = 'Persistenz-Tabelle';
+$_lang['Persistent connection'] = 'Persistenz-Verbindung';
+$_lang['Please select a section to administer in the left menu.'] = 'Bitte aus dem linken Menü einen Abschnitt zum Administrieren wählen.';
+$_lang['Please select a section to configure in the left menu.'] = 'Bitte aus dem linken Menü einen Abschnitt zum Konfigurieren wählen.';
+$_lang['Port'] = 'Port';
+$_lang['Programs Status'] = 'Status des Programme';
+$_lang['Programs'] = 'Programme';
+$_lang['Properties'] = 'Eigenschaften';
+$_lang['raw'] = 'roh';
+$_lang['Read/write object value'] = 'Ein Objekt lesen/schreiben';
+$_lang['Received value'] = 'Empfangener Wert';
+$_lang['Record value change'] = 'Wertänderungen aufnehmen';
+$_lang['Refresh Subpages List'] = 'Liste aktualisieren'; //  des Sous-pages
+$_lang['Regular expression'] = 'Regular expression';
+$_lang['Reload events'] = 'Ereignisse neu laden';
+$_lang['Reload XML'] = 'XML neu laden';
+$_lang['Remove Current Zone'] = 'Gegenwärtige Zone entfernen';
+$_lang['Remove design'] = 'Design entfernen';
+$_lang['Remove sub-page'] = 'Sub-Page entfernen';
+$_lang['Remove zone'] = 'Zone entfernen';
+$_lang['Remove'] = 'Entfernen';
+$_lang['request (read from bus)'] = 'abfragen (vom Bus lesen)';
+$_lang['reset-delay'] = 'Reset-Verzögerung';
+$_lang['rts-cts'] = 'rts-cts';
+$_lang['Rule on "Init" value'] = 'Regel beim Start von linknx';
+$_lang['Rule'] = 'Regel';
+$_lang['Rules'] = 'Regeln';
+$_lang['RX Port'] = 'RX Port';
+$_lang['Save Config'] = 'Konfiguration speichern';
+$_lang['Save rule'] = 'Regel speichern';
+$_lang['Save'] = 'Speichern';
+$_lang['Script'] = 'Script';
+$_lang['seconde(s)'] = 'Sekunde(n)';
+$_lang['Send a new file'] = 'Eine neue Datei senden';
+$_lang['Send'] = 'Senden';
+$_lang['Serial (RS232)'] = 'Seriell (RS232)';
+$_lang['Serial port/hostname'] = 'Serielle Schnittstelle/Hostname';
+$_lang['Server'] = 'Server';
+$_lang['Serveur SMTP'] = 'SMTP-Server';
+$_lang['Serveur(:port)'] = 'Server(:port)';
+$_lang['Simple'] = 'Einfach';
+$_lang['SMS gateway'] = 'SMS-Gateway';
+$_lang['SMTP'] = 'SMTP';
+$_lang['Source Adress'] = 'Quell-Adresse';
+$_lang['Speed'] = 'Geschwindigkeit';
+$_lang['Start'] = 'Anfang';
+$_lang['Stop'] = 'Ende';
+$_lang['Sub-page parameters'] = 'Sub-Page-Parameter';
+$_lang['Sub-pages'] = 'Sub-Pages';
+$_lang['Subject'] = 'Betreff';
+$_lang['Subpage'] = 'Sub-Page';
+$_lang['Sunrise'] = 'Sonnenaufgang';
+$_lang['Sunset'] = 'Sonnenuntergang';
+$_lang['TCP'] = 'TCP';
+$_lang['text'] = 'Text';
+$_lang['threshold'] = 'Schwelle';
+$_lang['Time constant'] = 'Feste Zeit';
+$_lang['Time variable'] = 'Veränderbare Zeit';
+$_lang['Timeout (in "raw" mode)'] = 'Zeitüberschreiung (im "Raw"-Modus)';
+$_lang['Timer'] = 'Zeitschaltuhr';
+$_lang['(you can visit'] = '(sie können auf';
+$_lang['this page'] = 'dieser Seite';
+$_lang['to find your coordinates)'] = 'Ihre Koordinaten herausfinden)';
+$_lang['To object'] = 'für Objekt';
+$_lang['To'] = 'Für';
+$_lang['Trigger'] = 'Auslöser';
+$_lang['True'] = 'Wahr';
+$_lang['Try design'] = 'Design ausprobieren';
+/* Day / jour */
+$_lang['Mo'] = 'Mo';
+$_lang['Tu'] = 'Di';
+$_lang['We'] = 'Mi';
+$_lang['Th'] = 'Do';
+$_lang['Fr'] = 'Fr';
+$_lang['Sa'] = 'Sa';
+$_lang['Su'] = 'So';
+$_lang['Type'] = 'Typ';
+$_lang['UDP'] = 'UDP';
+$_lang['unix'] = 'unix';
+$_lang['Until'] = 'bis';
+$_lang['Use external URL'] = 'Externe URL benutzen';
+$_lang['Username'] = 'Benutzername';
+$_lang['Valid'] = 'Gültig';
+$_lang['Value'] = 'Wert';
+$_lang['Var'] = 'Variable';
+$_lang['View Xml'] = 'Xml anzeigen';
+$_lang['View'] = 'Anzeigen';
+$_lang['Warn'] = 'Warn';
+$_lang['Warning: log parameters depends on linknx\'s compilation options (internal logger or log4cpp)'] = 'Warnung: die Protokoll-Parameter hängen von den linknx-Kompilieroptionen ab (interner logger bzw. log4cpp)';
+$_lang['Weekday'] = 'Wochentag';
+$_lang['Widget information'] = 'Widget-Informationen';
+$_lang['Widget type'] = 'Widget-Typ';
+$_lang['Widgets List'] = 'Liste der Widgets';
+$_lang['Width'] = 'Breite';
+$_lang['XML server type : port'] = 'XML server typ : port';
+$_lang['XML source'] = 'XML-Quelle';
+$_lang['Select a rule'] = 'Regel auswählen';
+$_lang['xon-xoff'] = 'xon-xoff';
+$_lang['Yes'] = 'Ja';
+$_lang['Zone background'] = 'Zonen-Hintergrund';
+$_lang['(If you change this value, you can not access linknx with knxweb without adapting your configuration in the Admin section)'] = '(Wenn dieser Wert geändert wird, kann nicht mehr mit knxweb auf linknx zugegriffen werden ohne die Konfiguration im Admin-Abschnitt anzupassen)';
+$_lang['Zones List'] = 'Liste der Zonen';
+$_lang['Resolution'] = 'Auflösung';
+$_lang['Repository'] = 'Repository';
+$_lang['Repository of Subpages'] = 'Repository für Sub-Pages';
+$_lang['Sub-pages List'] = 'Liste der Sub-Pages';
+$_lang['Repository of Widgets'] = 'Repository für Widgets';
+$_lang['Version'] = 'Version';
+$_lang['Download the Widget'] = 'Das Widget herunterladen';
+$_lang['is complete'] = 'ist fertig';  
+$_lang['Cancel'] = 'Abbrechen';
+$_lang['Ok'] = 'Ok';
+$_lang['Apply'] = 'Übernehmen';
+$_lang['by default : "cwtu"'] = 'standardmäßig : "cwtu"';
+$_lang['Communication'] = 'Kommunikation';
+$_lang['Read'] = 'Lesen';
+$_lang['Write'] = 'Schreiben';
+$_lang['Transmit'] = 'Übertragen';
+$_lang['Update'] = 'Aktualisieren';
+$_lang['Stateless'] = 'Zustandslos';
+$_lang['Force Write'] = 'Zwangsweise Schreiben';
+$_lang['Grid'] = 'Gitter';
+$_lang['Effects'] = 'Effekte';
+$_lang['Random'] = 'Zufall';
+$_lang['Widget size attach to the Grid'] = 'Widgets am Gitter einrasten';
+$_lang['Floating Widgets'] = 'Schwebende Widgets';
+$_lang['Margin Widgets'] = 'Begrenzung um Widgets';
+$_lang['Subpage name'] = 'Name der Sub-Page';
+$_lang['Design saved successfully'] = 'Design erfolgreich gespeichert';
+$_lang['Config saved successfully reload the web page for take effect in KnxWeb immediately'] = 'Konfiguration erfolgreich gespeichert, bitte die Webseite neu laden damit KnxWeb sie übernimmt';
+$_lang['Sub-pages saved successfully'] = 'Sub-Pages erfolgreich gespeichert';
+$_lang['Save Rule'] = 'Regel speichern';
+$_lang['Registration rule successfully'] = 'Regel erfolgreich gespeichert';
+$_lang['Please select an objet'] = 'Bitte ein Objekt auswählen';
+$_lang['Attention'] = 'Achtung';
+$_lang['Error'] = 'Fehler';
+$_lang['You cannot delete this Object because it\'s used in a rule.'] = 'Dieses Objekt kann nicht gelöscht werden, weil es in einer Regel verwendet wird';
+$_lang['Error: '] = 'Fehler: ';
+$_lang['Curve'] = 'Kurve';
+$_lang['Download'] = 'Herunterladen';
+$_lang['Already downloaded'] = 'Bereits heruntergeladen';
+$_lang['Up to date'] = 'Auf dem neuesten Stand';
+$_lang['Nombre maximum d\'action atteint'] = 'Nombre maximum d\'action atteint';
+$_lang['Action True'] = 'Aktion Wahr';
+$_lang['Action False'] = 'Aktion Falsch';
+
+
+$_lang['New page'] = 'Neue Seite';
+$_lang['Remove page'] = 'Seite entfernen';
+$_lang['Slider'] = 'Schieberegler';
+$_lang['Flip toggle switch'] = 'Umschalter betätigen';
+$_lang['List divider'] = 'Listen-Trenner';
+$_lang['Button'] = 'Knopf';
+$_lang['Button Group'] = 'Knopf-Gruppe';
+$_lang['Radio swicth'] = 'Radio swicth';
+$_lang['Select'] = 'Auswahl';
+$_lang['Text'] = 'Text';
+$_lang['Html'] = 'Html';
+$_lang['Fieldcontain'] = 'Fieldcontain';
+$_lang['ID'] = 'ID';
+$_lang['Add a widget'] = 'Ein Widget hinzufügen';
+$_lang['Choose a Widget'] = 'Ein Widget auswählen';
+$_lang['Prepend/Append'] = 'Voranstellen/Anfügen';
+$_lang['Add Mobile Widget'] = 'Mobil-Widget hinzufügen';
+$_lang['Previous'] = 'Vorhergehend';
+$_lang['Edit a'] = 'Bearbeiten von';
+$_lang['Toggleswicth'] = 'Toggleswicth';
+$_lang['Miniature'] = 'Miniature';
+$_lang['Off'] = 'Aus';
+$_lang['On'] = 'An';
+$_lang['Theme'] = 'Theme';
+$_lang['Highlight'] = 'Highlight';
+$_lang['Minimum'] = 'Minimum';
+$_lang['Maximum'] = 'Maximum';
+$_lang['Track'] = 'Spur';
+$_lang['Radioswicth'] = 'Radioswicth';
+$_lang['Orientation'] = 'Ausrichtung';
+$_lang['Vertical'] = 'Vertikal';
+$_lang['Horizontal'] = 'Horizontal';
+$_lang['Actionlist'] = 'Actionlist';
+$_lang['Object status'] = 'Objekt-Status';
+$_lang['Items'] = 'Element';
+$_lang['New Item'] = 'Neues Element';
+$_lang['Listview'] = 'Listview';
+$_lang['Divider Theme'] = 'Divider Theme';
+$_lang['Inset'] = 'Einfügen';
+$_lang['Link to page'] = 'Verknüpfung auf Seite';
+$_lang['Count Bubble Text'] = 'Count Bubble Text';
+$_lang['New Button'] = 'Neuer Knopf';
+$_lang['Inline'] = 'Inline';
+$_lang['Goto'] = 'Gehe zu';
+$_lang['html tag a'] = 'html tag a';
+$_lang['html tag li'] = 'html tag li';
+$_lang['Transitions'] = 'Übergänge';
+$_lang['Icone'] = 'Icon';
+$_lang['Left arrow'] = 'Pfeil nach links';
+$_lang['Right arrow'] = 'Pfeil nach rechts';
+$_lang['Up arrow'] = 'Pfeil nach oben';
+$_lang['Down arrow'] = 'Pfeil nach unten';
+$_lang['Plus'] = 'Plus';
+$_lang['Minus'] = 'Minus';
+$_lang['Check'] = 'Überprüfung';
+$_lang['Gear'] = 'Gerät';
+$_lang['Forward'] = 'Weiter';
+$_lang['Back'] = 'Zurück';
+$_lang['Star'] = 'Stern';
+$_lang['Alert'] = 'Alarm';
+$_lang['Home'] = 'Home';
+$_lang['Search'] = 'Suchen';
+$_lang['Left'] = 'Links';
+$_lang['Top'] = 'Oben';
+$_lang['Bottom'] = 'Unten';
+$_lang['Right'] = 'Rechts';
+$_lang['No Text'] = 'Kein Text';
+$_lang['Role'] = 'Rolle';
+$_lang['list-divider'] = 'Listen-Trenner';
+$_lang['Xml'] = 'Xml';
+$_lang['Footer Link List'] = 'Fußzeile Linkliste';
+$_lang['Page'] = 'Seite';
+$_lang['Portrait'] = 'Hochformat';
+$_lang['Landscape'] = 'Querformat';
+$_lang['Home button'] = 'Home-Knopf';
+$_lang['Back button'] = 'Zurück-Knopf';
+$_lang['Title Page'] = 'Seitentitel';
+$_lang['Footer'] = 'Fußzeile';
+$_lang['Update File'] = 'Datei aktualisieren';
+$_lang['Reload'] = 'Neu laden';
+
+$_lang['Widget type'] = 'Widget-Typ';
+$_lang['EIS data type'] = 'EIS-Datentyp';
+
+/*             
+$_lang[''] = '';
+*/
+
+?>
