@@ -9,6 +9,8 @@
 	* We can change UI-themes color and picture for "setup"
 	* for testing use "EventSource" for update objects status. We don't have to "pooling" update every secondes, linknx send the objects when their value change
 	to update knxweb design
+	* Add EIS type for object on subpages parameters (credit Fraxinas)
+	* Add Deutsch language (credit Fraxinas)
 
 
 2012-11-11 Anthony Penhard v0.9.2
